--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,13 @@
 <%= @products.each do |product| %>
   <div class="well">
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-6 col-md-4">
         <h3><%= product.title %></h3>
       </div>
-      <div class="col-sm-4">
+      <div class="col-6 col-md-4">
+        <h5><%= product.description %></h5>
+      </div>
+      <div class="col-6 col-md-4">
         <div class="pull-right">
           <%= form_for(@order_item) do |f| %>
             <%= f.hidden_field :product_id, value: product.id %>
