--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="col-6 col-md-4">
         <div class="pull-right">
-          <%= form_for(@order_item) do |f| %>
+          <%= form_for(@order_item, remote: true) do |f| %>
             <%= f.hidden_field :product_id, value: product.id %>
             <h5><%= product.price %></h5>
             <div class="form-group">
