--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,5 +1,5 @@
 <% if @order.errors.nil? || @order_item.errors.any? %>
   allert("Invalid")
 <% else %>
-  $(*.cart).html("<%= escape_javascript(render 'layout/cart') %>")
+  $(*.cart).html("<%= escape_javascript(render 'layouts/cart') %>")
 <% end %>
