fixing bags cart

--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -6,8 +6,8 @@
   </ul>
 <% end %>
 
-<% if @order_item.size > 0 %>
-  <% @order_item.each do |item| %>
+<% if @order_items.size > 0 %>
+  <% @order_items.each do |item| %>
     <div class="well">
       <div class="row">
         <div class="col-6 col-md-4">
@@ -18,7 +18,7 @@
         </div>
         <div class="col-6 col-md-4">
           <div class="pull-right">
-            <%= form_for(@item, remote: true) do |f| %>
+            <%= form_for(item, remote: true) do |f| %>
               <%= f.hidden_field :product_id, value: item.product.id %>
               <h5><%= item.product.price %></h5>
               <div class="form-group">
@@ -35,6 +35,4 @@
       </div>
     </div>
   <% end %>
-<% else %>
-
 <% end %>  
